fix overflow

--- a/styles/main.css
+++ b/styles/main.css
@@ -41,7 +41,6 @@
   padding: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
-  overflow-x: hidden;
 }
 
 /* default styles */
